Add React + Vite boilerplate

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# React + Vite
+node_modules
+.DS_Store
+dist-ssr
+*.local
+
+# Custom
+data/formatter.py
