--- a/data/Pipfile
+++ b/data/Pipfile
@@ -9,6 +9,7 @@ jupyterlab = "*"
 openpyxl = "*"
 pandasgui = "*"
 pyjanitor = "*"
+bamboolib = "*"
 
 [dev-packages]
 black = {extras = ["jupyter"], version = "*"}
