--- a/data/Pipfile
+++ b/data/Pipfile
@@ -8,6 +8,7 @@ pandas = "*"
 jupyterlab = "*"
 openpyxl = "*"
 pyjanitor = "*"
+httpimport = "*"
 
 [dev-packages]
 black = {extras = ["jupyter"], version = "*"}
