--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@adobe/react-spectrum": "^3.15.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
