--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@adobe/react-spectrum": "^3.15.1",
+        "@spectrum-icons/workflow": "^3.2.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
