--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "@adobe/react-spectrum": "^3.15.1",
         "@spectrum-icons/workflow": "^3.2.1",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "recoil": "^0.6.1"
     },
     "devDependencies": {
         "@joaopalmeiro/eslint-config-react": "^0.1.0",
