--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "lodash.isnull": "^3.0.0",
         "lodash.samplesize": "^4.2.0",
         "react": "^17.0.2",
+        "react-countdown": "^2.3.2",
         "react-dom": "^17.0.2",
         "recoil": "^0.6.1"
     },
